--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./node_modules/http-server/bin/http-server"
   },
-  "author": "John Parks Whitaker",
+  "author": "Ben Snyder",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
